# acs_pipe

./: prefect.yaml  pyproject.toml
acs_pipe/: .user.yml  dbt_project.yml  profiles.yml  talentpool.db
acs_pipe/macros/: ager.sql  avg_age.sql  degfieldr.sql  disability.sql  educr.sql  eeo_tab_code.sql  fsregions.sql  hispanr.sql  median_salary.sql  minoritystatr.sql  pct_demo.sql  pct_pub.sql  perwt_error.sql  perwt_sum.sql  perwt_sum_per_degree.sql  racer.sql  repwt.sql  researchstation.sql  sexr.sql  upuma.sql  vetstatr.sql
acs_pipe/models/: fsregions_median_salary.sql  joined.sql  recode.sql  researchstation_median_salary.sql  upuma_median_salary.sql  workingpop.sql
py/: array_aggregate.py  pipe.py
talentpool/: dbt_project.yml
