[tool.poetry]
name = "acs-pipe"
version = "0.1.0"
description = ""
authors = ["jpowell94 <jessepowell.r4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dbt-duckdb = "^1.8.1"
duckdb = "^1.0.0"
prefect = "^2.19.4"
prefect-dbt = "^0.5.0"
soda-core-duckdb = "^3.3.5"
sqlfluff = "^3.0.7"
polars = "^0.20.31"
pyarrow = "^16.1.0"
duckdb-engine = "^0.13.0"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
